--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -440,6 +440,39 @@
     "# Print the contents of the DataFrame\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         36\n",
+       "1         25\n",
+       "2          0\n",
+       "3         76\n",
+       "4         31\n",
+       "          ..\n",
+       "968828    34\n",
+       "968829    68\n",
+       "968830     0\n",
+       "968831    61\n",
+       "968832    33\n",
+       "Name: Vict Age, Length: 968833, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df['Vict Age'] < 0, 'Vict Age'] = 0\n",
+    "\n",
+    "df['Vict Age']"
+   ]
   }
  ],
  "metadata": {
