--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -568,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### testing my git 2nd time"
+    "### testing my git 3rd time"
    ]
   }
  ],
