--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -568,7 +568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### testing my git 4rd time"
+    "### testing my git 5th time - last one"
    ]
   }
  ],
