--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -80,8 +80,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10304468</td>\n",
-       "      <td>01/08/2020 12:00:00 AM</td>\n",
-       "      <td>01/08/2020 12:00:00 AM</td>\n",
+       "      <td>1/8/2020 0:00</td>\n",
+       "      <td>1/8/2020 0:00</td>\n",
        "      <td>2230</td>\n",
        "      <td>3</td>\n",
        "      <td>Southwest</td>\n",
@@ -104,8 +104,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>190101086</td>\n",
-       "      <td>01/02/2020 12:00:00 AM</td>\n",
-       "      <td>01/01/2020 12:00:00 AM</td>\n",
+       "      <td>1/2/2020 0:00</td>\n",
+       "      <td>1/1/2020 0:00</td>\n",
        "      <td>330</td>\n",
        "      <td>1</td>\n",
        "      <td>Central</td>\n",
@@ -128,8 +128,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>200110444</td>\n",
-       "      <td>04/14/2020 12:00:00 AM</td>\n",
-       "      <td>02/13/2020 12:00:00 AM</td>\n",
+       "      <td>4/14/2020 0:00</td>\n",
+       "      <td>2/13/2020 0:00</td>\n",
        "      <td>1200</td>\n",
        "      <td>1</td>\n",
        "      <td>Central</td>\n",
@@ -152,8 +152,8 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>191501505</td>\n",
-       "      <td>01/01/2020 12:00:00 AM</td>\n",
-       "      <td>01/01/2020 12:00:00 AM</td>\n",
+       "      <td>1/1/2020 0:00</td>\n",
+       "      <td>1/1/2020 0:00</td>\n",
        "      <td>1730</td>\n",
        "      <td>15</td>\n",
        "      <td>N Hollywood</td>\n",
@@ -176,8 +176,8 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>191921269</td>\n",
-       "      <td>01/01/2020 12:00:00 AM</td>\n",
-       "      <td>01/01/2020 12:00:00 AM</td>\n",
+       "      <td>1/1/2020 0:00</td>\n",
+       "      <td>1/1/2020 0:00</td>\n",
        "      <td>415</td>\n",
        "      <td>19</td>\n",
        "      <td>Mission</td>\n",
@@ -203,19 +203,19 @@
        "</div>"
       ],
       "text/plain": [
-       "       DR_NO               Date Rptd                DATE OCC  TIME OCC  AREA  \\\n",
-       "0   10304468  01/08/2020 12:00:00 AM  01/08/2020 12:00:00 AM      2230     3   \n",
-       "1  190101086  01/02/2020 12:00:00 AM  01/01/2020 12:00:00 AM       330     1   \n",
-       "2  200110444  04/14/2020 12:00:00 AM  02/13/2020 12:00:00 AM      1200     1   \n",
-       "3  191501505  01/01/2020 12:00:00 AM  01/01/2020 12:00:00 AM      1730    15   \n",
-       "4  191921269  01/01/2020 12:00:00 AM  01/01/2020 12:00:00 AM       415    19   \n",
+       "       DR_NO       Date Rptd        DATE OCC  TIME OCC  AREA    AREA NAME  \\\n",
+       "0   10304468   1/8/2020 0:00   1/8/2020 0:00      2230     3    Southwest   \n",
+       "1  190101086   1/2/2020 0:00   1/1/2020 0:00       330     1      Central   \n",
+       "2  200110444  4/14/2020 0:00  2/13/2020 0:00      1200     1      Central   \n",
+       "3  191501505   1/1/2020 0:00   1/1/2020 0:00      1730    15  N Hollywood   \n",
+       "4  191921269   1/1/2020 0:00   1/1/2020 0:00       415    19      Mission   \n",
        "\n",
-       "     AREA NAME  Rpt Dist No  Part 1-2  Crm Cd  \\\n",
-       "0    Southwest          377         2     624   \n",
-       "1      Central          163         2     624   \n",
-       "2      Central          155         2     845   \n",
-       "3  N Hollywood         1543         2     745   \n",
-       "4      Mission         1998         2     740   \n",
+       "   Rpt Dist No  Part 1-2  Crm Cd  \\\n",
+       "0          377         2     624   \n",
+       "1          163         2     624   \n",
+       "2          155         2     845   \n",
+       "3         1543         2     745   \n",
+       "4         1998         2     740   \n",
        "\n",
        "                                         Crm Cd Desc  ... Status  \\\n",
        "0                           BATTERY - SIMPLE ASSAULT  ...     AO   \n",
@@ -241,7 +241,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "(968833, 28)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -401,8 +401,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10304468</td>\n",
-       "      <td>01/08/2020 12:00:00 AM</td>\n",
-       "      <td>01/08/2020 12:00:00 AM</td>\n",
+       "      <td>1/8/2020 0:00</td>\n",
+       "      <td>1/8/2020 0:00</td>\n",
        "      <td>2230</td>\n",
        "      <td>Southwest</td>\n",
        "      <td>624</td>\n",
@@ -422,8 +422,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>190101086</td>\n",
-       "      <td>01/02/2020 12:00:00 AM</td>\n",
-       "      <td>01/01/2020 12:00:00 AM</td>\n",
+       "      <td>1/2/2020 0:00</td>\n",
+       "      <td>1/1/2020 0:00</td>\n",
        "      <td>330</td>\n",
        "      <td>Central</td>\n",
        "      <td>624</td>\n",
@@ -443,8 +443,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>200110444</td>\n",
-       "      <td>04/14/2020 12:00:00 AM</td>\n",
-       "      <td>02/13/2020 12:00:00 AM</td>\n",
+       "      <td>4/14/2020 0:00</td>\n",
+       "      <td>2/13/2020 0:00</td>\n",
        "      <td>1200</td>\n",
        "      <td>Central</td>\n",
        "      <td>845</td>\n",
@@ -464,8 +464,8 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>191501505</td>\n",
-       "      <td>01/01/2020 12:00:00 AM</td>\n",
-       "      <td>01/01/2020 12:00:00 AM</td>\n",
+       "      <td>1/1/2020 0:00</td>\n",
+       "      <td>1/1/2020 0:00</td>\n",
        "      <td>1730</td>\n",
        "      <td>N Hollywood</td>\n",
        "      <td>745</td>\n",
@@ -485,8 +485,8 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>191921269</td>\n",
-       "      <td>01/01/2020 12:00:00 AM</td>\n",
-       "      <td>01/01/2020 12:00:00 AM</td>\n",
+       "      <td>1/1/2020 0:00</td>\n",
+       "      <td>1/1/2020 0:00</td>\n",
        "      <td>415</td>\n",
        "      <td>Mission</td>\n",
        "      <td>740</td>\n",
@@ -508,33 +508,26 @@
        "</div>"
       ],
       "text/plain": [
-       "       DR_NO               Date Rptd                DATE OCC  TIME OCC  \\\n",
-       "0   10304468  01/08/2020 12:00:00 AM  01/08/2020 12:00:00 AM      2230   \n",
-       "1  190101086  01/02/2020 12:00:00 AM  01/01/2020 12:00:00 AM       330   \n",
-       "2  200110444  04/14/2020 12:00:00 AM  02/13/2020 12:00:00 AM      1200   \n",
-       "3  191501505  01/01/2020 12:00:00 AM  01/01/2020 12:00:00 AM      1730   \n",
-       "4  191921269  01/01/2020 12:00:00 AM  01/01/2020 12:00:00 AM       415   \n",
+       "       DR_NO       Date Rptd        DATE OCC  TIME OCC    AREA NAME  Crm Cd  \\\n",
+       "0   10304468   1/8/2020 0:00   1/8/2020 0:00      2230    Southwest     624   \n",
+       "1  190101086   1/2/2020 0:00   1/1/2020 0:00       330      Central     624   \n",
+       "2  200110444  4/14/2020 0:00  2/13/2020 0:00      1200      Central     845   \n",
+       "3  191501505   1/1/2020 0:00   1/1/2020 0:00      1730  N Hollywood     745   \n",
+       "4  191921269   1/1/2020 0:00   1/1/2020 0:00       415      Mission     740   \n",
        "\n",
-       "     AREA NAME  Crm Cd                                        Crm Cd Desc  \\\n",
-       "0    Southwest     624                           BATTERY - SIMPLE ASSAULT   \n",
-       "1      Central     624                           BATTERY - SIMPLE ASSAULT   \n",
-       "2      Central     845          SEX OFFENDER REGISTRANT OUT OF COMPLIANCE   \n",
-       "3  N Hollywood     745           VANDALISM - MISDEAMEANOR ($399 OR UNDER)   \n",
-       "4      Mission     740  VANDALISM - FELONY ($400 & OVER, ALL CHURCH VA...   \n",
+       "                                         Crm Cd Desc  Vict Age Vict Sex  \\\n",
+       "0                           BATTERY - SIMPLE ASSAULT        36        F   \n",
+       "1                           BATTERY - SIMPLE ASSAULT        25        M   \n",
+       "2          SEX OFFENDER REGISTRANT OUT OF COMPLIANCE         0        X   \n",
+       "3           VANDALISM - MISDEAMEANOR ($399 OR UNDER)        76        F   \n",
+       "4  VANDALISM - FELONY ($400 & OVER, ALL CHURCH VA...        31        X   \n",
        "\n",
-       "   Vict Age Vict Sex Vict Descent  \\\n",
-       "0        36        F            B   \n",
-       "1        25        M            H   \n",
-       "2         0        X            X   \n",
-       "3        76        F            W   \n",
-       "4        31        X            X   \n",
-       "\n",
-       "                                    Premis Desc  Weapon Used Cd  \\\n",
-       "0                        SINGLE FAMILY DWELLING           400.0   \n",
-       "1                                      SIDEWALK           500.0   \n",
-       "2                               POLICE FACILITY             NaN   \n",
-       "3  MULTI-UNIT DWELLING (APARTMENT, DUPLEX, ETC)             NaN   \n",
-       "4                           BEAUTY SUPPLY STORE             NaN   \n",
+       "  Vict Descent                                   Premis Desc  Weapon Used Cd  \\\n",
+       "0            B                        SINGLE FAMILY DWELLING           400.0   \n",
+       "1            H                                      SIDEWALK           500.0   \n",
+       "2            X                               POLICE FACILITY             NaN   \n",
+       "3            W  MULTI-UNIT DWELLING (APARTMENT, DUPLEX, ETC)             NaN   \n",
+       "4            X                           BEAUTY SUPPLY STORE             NaN   \n",
        "\n",
        "                                      Weapon Desc   Status Desc  Crm Cd 1  \\\n",
        "0  STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)   Adult Other     624.0   \n",
@@ -551,7 +544,7 @@
        "4  14400    TITUS                        ST  34.2198 -118.4468  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,13 +554,153 @@
     "df = df.drop(['AREA', 'Rpt Dist No', 'Part 1-2', 'Mocodes', 'Premis Cd','Status','Crm Cd 2','Crm Cd 3','Crm Cd 4','Cross Street'], axis=1)\n",
     "df.head(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change Vict Age value\n",
+    "df.loc[df['Vict Age'] < 0, 'Vict Age'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          Female\n",
+       "1            Male\n",
+       "2         Unknown\n",
+       "3          Female\n",
+       "4         Unknown\n",
+       "           ...   \n",
+       "968828     Female\n",
+       "968829       Male\n",
+       "968830    Unknown\n",
+       "968831     Female\n",
+       "968832       Male\n",
+       "Name: Vict Sex, Length: 968833, dtype: object"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change Vict Sex value\n",
+    "# Replace 'F' with 'Female'\n",
+    "df['Vict Sex'] = df['Vict Sex'].replace('F', 'Female')\n",
+    "\n",
+    "# Replace 'M' with 'Male'\n",
+    "df['Vict Sex'] = df['Vict Sex'].replace('M', 'Male')\n",
+    "\n",
+    "# Replace 'X', 'H', 'N', ' ' with 'Uknown'\n",
+    "df['Vict Sex'] = df['Vict Sex'].replace(['X', 'H', 'N', ' '], 'Unknown')\n",
+    "\n",
+    "# Replace NaN values with 'Prefer not to say'\n",
+    "df['Vict Sex'].fillna('Unknown', inplace=True)\n",
+    "\n",
+    "df['Vict Sex']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                          Black\n",
+       "1         Hispanic/Latin/Mexican\n",
+       "2                        Unknown\n",
+       "3                          White\n",
+       "4                        Unknown\n",
+       "                   ...          \n",
+       "968828    Hispanic/Latin/Mexican\n",
+       "968829                     White\n",
+       "968830                   Unknown\n",
+       "968831    Hispanic/Latin/Mexican\n",
+       "968832                     Black\n",
+       "Name: Vict Descent, Length: 968833, dtype: object"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change Vict Descent value\n",
+    "descent_mapping = {\n",
+    "    'A': 'Other Asian',\n",
+    "    'B': 'Black',\n",
+    "    'C': 'Chinese',\n",
+    "    'D': 'Cambodian',\n",
+    "    'F': 'Filipino',\n",
+    "    'G': 'Guamanian',\n",
+    "    'H': 'Hispanic/Latin/Mexican',\n",
+    "    'I': 'American Indian/Alaskan Native',\n",
+    "    'J': 'Japanese',\n",
+    "    'K': 'Korean',\n",
+    "    'L': 'Laotian',\n",
+    "    'O': 'Other',\n",
+    "    'P': 'Pacific Islander',\n",
+    "    'S': 'Samoan',\n",
+    "    'U': 'Hawaiian',\n",
+    "    'V': 'Vietnamese',\n",
+    "    'W': 'White',\n",
+    "    'X': 'Unknown',\n",
+    "    'Z': 'Asian Indian'\n",
+    "}\n",
+    "\n",
+    "# Apply the replacements using the map function\n",
+    "df['Vict Descent'] = df['Vict Descent'].map(descent_mapping).fillna('Unknown')\n",
+    "\n",
+    "\n",
+    "df['Vict Descent']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test_env",
+   "display_name": "the_one",
    "language": "python",
-   "name": "test_env"
+   "name": "the_one"
   },
   "language_info": {
    "codemirror_mode": {
@@ -579,7 +712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
