--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "(968833, 28)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,6 @@
        "      <th>Vict Sex</th>\n",
        "      <th>Vict Descent</th>\n",
        "      <th>Premis Desc</th>\n",
-       "      <th>Weapon Used Cd</th>\n",
        "      <th>Weapon Desc</th>\n",
        "      <th>Status Desc</th>\n",
        "      <th>Crm Cd 1</th>\n",
@@ -411,7 +410,6 @@
        "      <td>F</td>\n",
        "      <td>B</td>\n",
        "      <td>SINGLE FAMILY DWELLING</td>\n",
-       "      <td>400.0</td>\n",
        "      <td>STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)</td>\n",
        "      <td>Adult Other</td>\n",
        "      <td>624.0</td>\n",
@@ -432,7 +430,6 @@
        "      <td>M</td>\n",
        "      <td>H</td>\n",
        "      <td>SIDEWALK</td>\n",
-       "      <td>500.0</td>\n",
        "      <td>UNKNOWN WEAPON/OTHER WEAPON</td>\n",
        "      <td>Invest Cont</td>\n",
        "      <td>624.0</td>\n",
@@ -454,7 +451,6 @@
        "      <td>X</td>\n",
        "      <td>POLICE FACILITY</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Adult Arrest</td>\n",
        "      <td>845.0</td>\n",
        "      <td>200 E  6TH                          ST</td>\n",
@@ -475,7 +471,6 @@
        "      <td>W</td>\n",
        "      <td>MULTI-UNIT DWELLING (APARTMENT, DUPLEX, ETC)</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Invest Cont</td>\n",
        "      <td>745.0</td>\n",
        "      <td>5400    CORTEEN                      PL</td>\n",
@@ -495,7 +490,6 @@
        "      <td>X</td>\n",
        "      <td>X</td>\n",
        "      <td>BEAUTY SUPPLY STORE</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Invest Cont</td>\n",
        "      <td>740.0</td>\n",
@@ -522,12 +516,12 @@
        "3           VANDALISM - MISDEAMEANOR ($399 OR UNDER)        76        F   \n",
        "4  VANDALISM - FELONY ($400 & OVER, ALL CHURCH VA...        31        X   \n",
        "\n",
-       "  Vict Descent                                   Premis Desc  Weapon Used Cd  \\\n",
-       "0            B                        SINGLE FAMILY DWELLING           400.0   \n",
-       "1            H                                      SIDEWALK           500.0   \n",
-       "2            X                               POLICE FACILITY             NaN   \n",
-       "3            W  MULTI-UNIT DWELLING (APARTMENT, DUPLEX, ETC)             NaN   \n",
-       "4            X                           BEAUTY SUPPLY STORE             NaN   \n",
+       "  Vict Descent                                   Premis Desc  \\\n",
+       "0            B                        SINGLE FAMILY DWELLING   \n",
+       "1            H                                      SIDEWALK   \n",
+       "2            X                               POLICE FACILITY   \n",
+       "3            W  MULTI-UNIT DWELLING (APARTMENT, DUPLEX, ETC)   \n",
+       "4            X                           BEAUTY SUPPLY STORE   \n",
        "\n",
        "                                      Weapon Desc   Status Desc  Crm Cd 1  \\\n",
        "0  STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)   Adult Other     624.0   \n",
@@ -544,20 +538,20 @@
        "4  14400    TITUS                        ST  34.2198 -118.4468  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Dropping irrelevant columns\n",
-    "df = df.drop(['AREA', 'Rpt Dist No', 'Part 1-2', 'Mocodes', 'Premis Cd','Status','Crm Cd 2','Crm Cd 3','Crm Cd 4','Cross Street'], axis=1)\n",
+    "df = df.drop(['AREA', 'Rpt Dist No', 'Part 1-2', 'Mocodes', 'Premis Cd','Status','Weapon Used Cd','Crm Cd 2','Crm Cd 3','Crm Cd 4','Cross Street'], axis=1)\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +581,7 @@
        "Name: Vict Sex, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +597,7 @@
     "# Replace 'X', 'H', 'N', ' ' with 'Uknown'\n",
     "df['Vict Sex'] = df['Vict Sex'].replace(['X', 'H', 'N', ' '], 'Unknown')\n",
     "\n",
-    "# Replace NaN values with 'Prefer not to say'\n",
+    "# Replace NaN values with 'Unknown'\n",
     "df['Vict Sex'].fillna('Unknown', inplace=True)\n",
     "\n",
     "df['Vict Sex']"
@@ -611,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +625,7 @@
        "Name: Vict Descent, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,10 +663,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)\n",
+       "1                            UNKNOWN WEAPON/OTHER WEAPON\n",
+       "2                                                Unknown\n",
+       "3                                                Unknown\n",
+       "4                                                Unknown\n",
+       "                               ...                      \n",
+       "968828                                           Unknown\n",
+       "968829                                           Unknown\n",
+       "968830                                           Unknown\n",
+       "968831                                           Unknown\n",
+       "968832    STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)\n",
+       "Name: Weapon Desc, Length: 968833, dtype: object"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# adding the \"Unknown\" text on blank values for 'Weapon Desc' and 'Weapon Used Cd'\n",
+    "df['Weapon Desc'].fillna(value='Unknown')"
+   ]
   },
   {
    "cell_type": "code",
