--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "(968833, 28)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "4  14400    TITUS                        ST  34.2198 -118.4468  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "Name: Vict Sex, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "Name: Vict Descent, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "Name: Weapon Desc, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,6 +691,26 @@
    "source": [
     "# adding the \"Unknown\" text on blank values for 'Weapon Desc' and 'Weapon Used Cd'\n",
     "df['Weapon Desc'].fillna(value='Unknown')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert 'time occ' column to string type\n",
+    "df['TIME OCC'] = df['TIME OCC'].astype(str)\n",
+    "\n",
+    "# Extract hour and minute values from 'time occ' column\n",
+    "hour = df['TIME OCC'].str[:-2]\n",
+    "minute = df['TIME OCC'].str[-2:]\n",
+    "\n",
+    "# Add leading zeros to hour if necessary\n",
+    "hour = hour.str.zfill(2)\n",
+    "\n",
+    "# Combine hour and minute values with a colon\n",
+    "df['TIME OCC'] = hour + ':' + minute"
    ]
   },
   {
@@ -719,7 +739,7 @@
   "kernelspec": {
    "display_name": "the_one",
    "language": "python",
-   "name": "the_one"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
