--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,7 +10,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -80,8 +78,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10304468</td>\n",
-       "      <td>1/8/2020 0:00</td>\n",
-       "      <td>1/8/2020 0:00</td>\n",
+       "      <td>01/08/2020 12:00:00 AM</td>\n",
+       "      <td>01/08/2020 12:00:00 AM</td>\n",
        "      <td>2230</td>\n",
        "      <td>3</td>\n",
        "      <td>Southwest</td>\n",
@@ -104,8 +102,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>190101086</td>\n",
-       "      <td>1/2/2020 0:00</td>\n",
-       "      <td>1/1/2020 0:00</td>\n",
+       "      <td>01/02/2020 12:00:00 AM</td>\n",
+       "      <td>01/01/2020 12:00:00 AM</td>\n",
        "      <td>330</td>\n",
        "      <td>1</td>\n",
        "      <td>Central</td>\n",
@@ -128,8 +126,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>200110444</td>\n",
-       "      <td>4/14/2020 0:00</td>\n",
-       "      <td>2/13/2020 0:00</td>\n",
+       "      <td>04/14/2020 12:00:00 AM</td>\n",
+       "      <td>02/13/2020 12:00:00 AM</td>\n",
        "      <td>1200</td>\n",
        "      <td>1</td>\n",
        "      <td>Central</td>\n",
@@ -152,8 +150,8 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>191501505</td>\n",
-       "      <td>1/1/2020 0:00</td>\n",
-       "      <td>1/1/2020 0:00</td>\n",
+       "      <td>01/01/2020 12:00:00 AM</td>\n",
+       "      <td>01/01/2020 12:00:00 AM</td>\n",
        "      <td>1730</td>\n",
        "      <td>15</td>\n",
        "      <td>N Hollywood</td>\n",
@@ -176,8 +174,8 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>191921269</td>\n",
-       "      <td>1/1/2020 0:00</td>\n",
-       "      <td>1/1/2020 0:00</td>\n",
+       "      <td>01/01/2020 12:00:00 AM</td>\n",
+       "      <td>01/01/2020 12:00:00 AM</td>\n",
        "      <td>415</td>\n",
        "      <td>19</td>\n",
        "      <td>Mission</td>\n",
@@ -203,19 +201,19 @@
        "</div>"
       ],
       "text/plain": [
-       "       DR_NO       Date Rptd        DATE OCC  TIME OCC  AREA    AREA NAME  \\\n",
-       "0   10304468   1/8/2020 0:00   1/8/2020 0:00      2230     3    Southwest   \n",
-       "1  190101086   1/2/2020 0:00   1/1/2020 0:00       330     1      Central   \n",
-       "2  200110444  4/14/2020 0:00  2/13/2020 0:00      1200     1      Central   \n",
-       "3  191501505   1/1/2020 0:00   1/1/2020 0:00      1730    15  N Hollywood   \n",
-       "4  191921269   1/1/2020 0:00   1/1/2020 0:00       415    19      Mission   \n",
+       "       DR_NO               Date Rptd                DATE OCC  TIME OCC  AREA  \\\n",
+       "0   10304468  01/08/2020 12:00:00 AM  01/08/2020 12:00:00 AM      2230     3   \n",
+       "1  190101086  01/02/2020 12:00:00 AM  01/01/2020 12:00:00 AM       330     1   \n",
+       "2  200110444  04/14/2020 12:00:00 AM  02/13/2020 12:00:00 AM      1200     1   \n",
+       "3  191501505  01/01/2020 12:00:00 AM  01/01/2020 12:00:00 AM      1730    15   \n",
+       "4  191921269  01/01/2020 12:00:00 AM  01/01/2020 12:00:00 AM       415    19   \n",
        "\n",
-       "   Rpt Dist No  Part 1-2  Crm Cd  \\\n",
-       "0          377         2     624   \n",
-       "1          163         2     624   \n",
-       "2          155         2     845   \n",
-       "3         1543         2     745   \n",
-       "4         1998         2     740   \n",
+       "     AREA NAME  Rpt Dist No  Part 1-2  Crm Cd  \\\n",
+       "0    Southwest          377         2     624   \n",
+       "1      Central          163         2     624   \n",
+       "2      Central          155         2     845   \n",
+       "3  N Hollywood         1543         2     745   \n",
+       "4      Mission         1998         2     740   \n",
        "\n",
        "                                         Crm Cd Desc  ... Status  \\\n",
        "0                           BATTERY - SIMPLE ASSAULT  ...     AO   \n",
@@ -241,7 +239,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +290,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +339,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -400,8 +398,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10304468</td>\n",
-       "      <td>1/8/2020 0:00</td>\n",
-       "      <td>1/8/2020 0:00</td>\n",
+       "      <td>01/08/2020 12:00:00 AM</td>\n",
+       "      <td>01/08/2020 12:00:00 AM</td>\n",
        "      <td>2230</td>\n",
        "      <td>Southwest</td>\n",
        "      <td>624</td>\n",
@@ -420,8 +418,8 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>190101086</td>\n",
-       "      <td>1/2/2020 0:00</td>\n",
-       "      <td>1/1/2020 0:00</td>\n",
+       "      <td>01/02/2020 12:00:00 AM</td>\n",
+       "      <td>01/01/2020 12:00:00 AM</td>\n",
        "      <td>330</td>\n",
        "      <td>Central</td>\n",
        "      <td>624</td>\n",
@@ -440,8 +438,8 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>200110444</td>\n",
-       "      <td>4/14/2020 0:00</td>\n",
-       "      <td>2/13/2020 0:00</td>\n",
+       "      <td>04/14/2020 12:00:00 AM</td>\n",
+       "      <td>02/13/2020 12:00:00 AM</td>\n",
        "      <td>1200</td>\n",
        "      <td>Central</td>\n",
        "      <td>845</td>\n",
@@ -460,8 +458,8 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>191501505</td>\n",
-       "      <td>1/1/2020 0:00</td>\n",
-       "      <td>1/1/2020 0:00</td>\n",
+       "      <td>01/01/2020 12:00:00 AM</td>\n",
+       "      <td>01/01/2020 12:00:00 AM</td>\n",
        "      <td>1730</td>\n",
        "      <td>N Hollywood</td>\n",
        "      <td>745</td>\n",
@@ -480,8 +478,8 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>191921269</td>\n",
-       "      <td>1/1/2020 0:00</td>\n",
-       "      <td>1/1/2020 0:00</td>\n",
+       "      <td>01/01/2020 12:00:00 AM</td>\n",
+       "      <td>01/01/2020 12:00:00 AM</td>\n",
        "      <td>415</td>\n",
        "      <td>Mission</td>\n",
        "      <td>740</td>\n",
@@ -502,26 +500,33 @@
        "</div>"
       ],
       "text/plain": [
-       "       DR_NO       Date Rptd        DATE OCC  TIME OCC    AREA NAME  Crm Cd  \\\n",
-       "0   10304468   1/8/2020 0:00   1/8/2020 0:00      2230    Southwest     624   \n",
-       "1  190101086   1/2/2020 0:00   1/1/2020 0:00       330      Central     624   \n",
-       "2  200110444  4/14/2020 0:00  2/13/2020 0:00      1200      Central     845   \n",
-       "3  191501505   1/1/2020 0:00   1/1/2020 0:00      1730  N Hollywood     745   \n",
-       "4  191921269   1/1/2020 0:00   1/1/2020 0:00       415      Mission     740   \n",
+       "       DR_NO               Date Rptd                DATE OCC  TIME OCC  \\\n",
+       "0   10304468  01/08/2020 12:00:00 AM  01/08/2020 12:00:00 AM      2230   \n",
+       "1  190101086  01/02/2020 12:00:00 AM  01/01/2020 12:00:00 AM       330   \n",
+       "2  200110444  04/14/2020 12:00:00 AM  02/13/2020 12:00:00 AM      1200   \n",
+       "3  191501505  01/01/2020 12:00:00 AM  01/01/2020 12:00:00 AM      1730   \n",
+       "4  191921269  01/01/2020 12:00:00 AM  01/01/2020 12:00:00 AM       415   \n",
        "\n",
-       "                                         Crm Cd Desc  Vict Age Vict Sex  \\\n",
-       "0                           BATTERY - SIMPLE ASSAULT        36        F   \n",
-       "1                           BATTERY - SIMPLE ASSAULT        25        M   \n",
-       "2          SEX OFFENDER REGISTRANT OUT OF COMPLIANCE         0        X   \n",
-       "3           VANDALISM - MISDEAMEANOR ($399 OR UNDER)        76        F   \n",
-       "4  VANDALISM - FELONY ($400 & OVER, ALL CHURCH VA...        31        X   \n",
+       "     AREA NAME  Crm Cd                                        Crm Cd Desc  \\\n",
+       "0    Southwest     624                           BATTERY - SIMPLE ASSAULT   \n",
+       "1      Central     624                           BATTERY - SIMPLE ASSAULT   \n",
+       "2      Central     845          SEX OFFENDER REGISTRANT OUT OF COMPLIANCE   \n",
+       "3  N Hollywood     745           VANDALISM - MISDEAMEANOR ($399 OR UNDER)   \n",
+       "4      Mission     740  VANDALISM - FELONY ($400 & OVER, ALL CHURCH VA...   \n",
        "\n",
-       "  Vict Descent                                   Premis Desc  \\\n",
-       "0            B                        SINGLE FAMILY DWELLING   \n",
-       "1            H                                      SIDEWALK   \n",
-       "2            X                               POLICE FACILITY   \n",
-       "3            W  MULTI-UNIT DWELLING (APARTMENT, DUPLEX, ETC)   \n",
-       "4            X                           BEAUTY SUPPLY STORE   \n",
+       "   Vict Age Vict Sex Vict Descent  \\\n",
+       "0        36        F            B   \n",
+       "1        25        M            H   \n",
+       "2         0        X            X   \n",
+       "3        76        F            W   \n",
+       "4        31        X            X   \n",
+       "\n",
+       "                                    Premis Desc  \\\n",
+       "0                        SINGLE FAMILY DWELLING   \n",
+       "1                                      SIDEWALK   \n",
+       "2                               POLICE FACILITY   \n",
+       "3  MULTI-UNIT DWELLING (APARTMENT, DUPLEX, ETC)   \n",
+       "4                           BEAUTY SUPPLY STORE   \n",
        "\n",
        "                                      Weapon Desc   Status Desc  Crm Cd 1  \\\n",
        "0  STRONG-ARM (HANDS, FIST, FEET OR BODILY FORCE)   Adult Other     624.0   \n",
@@ -538,7 +543,7 @@
        "4  14400    TITUS                        ST  34.2198 -118.4468  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +586,7 @@
        "Name: Vict Sex, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +630,7 @@
        "Name: Vict Descent, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +688,7 @@
        "Name: Weapon Desc, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,10 +720,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(968833, 17)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DR_NO           968833\n",
+       "Date Rptd       968833\n",
+       "DATE OCC        968833\n",
+       "TIME OCC        968833\n",
+       "AREA NAME       968833\n",
+       "Crm Cd          968833\n",
+       "Crm Cd Desc     968833\n",
+       "Vict Age        968833\n",
+       "Vict Sex        968833\n",
+       "Vict Descent    968833\n",
+       "Premis Desc     968317\n",
+       "Weapon Desc     337873\n",
+       "Status Desc     968833\n",
+       "Crm Cd 1        968823\n",
+       "LOCATION        968833\n",
+       "LAT             968833\n",
+       "LON             968833\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of duplicate rows:  (20811, 17)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#remove duplicate data\n",
+    "duplicate_rows_df = df[df['DR_NO'].duplicated()]\n",
+    "print(\"number of duplicate rows: \", duplicate_rows_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop_duplicates(subset=['DR_NO'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DR_NO           948022\n",
+       "Date Rptd       948022\n",
+       "DATE OCC        948022\n",
+       "TIME OCC        948022\n",
+       "AREA NAME       948022\n",
+       "Crm Cd          948022\n",
+       "Crm Cd Desc     948022\n",
+       "Vict Age        948022\n",
+       "Vict Sex        948022\n",
+       "Vict Descent    948022\n",
+       "Premis Desc     947515\n",
+       "Weapon Desc     331741\n",
+       "Status Desc     948022\n",
+       "Crm Cd 1        948012\n",
+       "LOCATION        948022\n",
+       "LAT             948022\n",
+       "LON             948022\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.count()"
+   ]
   },
   {
    "cell_type": "code",
@@ -737,9 +864,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "the_one",
+   "display_name": "test_env",
    "language": "python",
-   "name": "python3"
+   "name": "test_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -751,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
