--- a/Capstone-Project.ipynb
+++ b/Capstone-Project.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "(968833, 28)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "4  14400    TITUS                        ST  34.2198 -118.4468  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
        "Name: Vict Sex, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "Name: Vict Descent, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "Name: Weapon Desc, Length: 968833, dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
        "(968833, 17)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,14 +838,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error"
+    "### Hypothesis"
    ]
   },
   {
@@ -869,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -931,18 +928,80 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Build Regression Model"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 Crm Cd   R-squared:                       0.001\n",
+      "Model:                            OLS   Adj. R-squared:                  0.001\n",
+      "Method:                 Least Squares   F-statistic:                     342.8\n",
+      "Date:                Wed, 14 Jun 2023   Prob (F-statistic):           1.73e-76\n",
+      "Time:                        18:16:24   Log-Likelihood:            -2.4329e+06\n",
+      "No. Observations:              355971   AIC:                         4.866e+06\n",
+      "Df Residuals:                  355969   BIC:                         4.866e+06\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const        546.4218      0.969    563.835      0.000     544.522     548.321\n",
+      "Vict Age      -0.4326      0.023    -18.514      0.000      -0.478      -0.387\n",
+      "==============================================================================\n",
+      "Omnibus:                   163542.135   Durbin-Watson:                   1.987\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            22779.284\n",
+      "Skew:                           0.274   Prob(JB):                         0.00\n",
+      "Kurtosis:                       1.888   Cond. No.                         107.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select the relevant columns for regression\n",
+    "df_selected = df[['Vict Age', 'Vict Sex', 'Crm Cd']]\n",
+    "\n",
+    "# Filter the dataset for female victims only\n",
+    "df_female = df_selected[df_selected['Vict Sex'] == 'Female']\n",
+    "\n",
+    "# Dependent variable\n",
+    "y = df_female['Crm Cd']\n",
+    "\n",
+    "# Independent variables\n",
+    "X = df_female[['Vict Age']]\n",
+    "\n",
+    "# Add a constant to the predictor variable\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Fit the regression model\n",
+    "model = sm.OLS(y, X)\n",
+    "results = model.fit()\n",
+    "\n",
+    "print(results.summary())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall, the regression analysis suggests that there is a statistically significant relationship between Vict Age and Crm Cd for female victims. However, the low R-squared value suggests that Vict Age alone explains only a small portion of the variation in Crm Cd."
+   ]
   }
  ],
  "metadata": {
